// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge/> should render correctly if the variant is valid 1`] = `
.c0 {
  border: 1px solid #F9A109;
  border-radius: 12px;
  color: #F9A109;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 2`] = `
.c0 {
  border: 1px solid #56CCF2;
  border-radius: 12px;
  color: #56CCF2;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 3`] = `
.c0 {
  border: 1px solid #EB5757;
  border-radius: 12px;
  color: #EB5757;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 4`] = `
.c0 {
  border: 1px solid #FFFFFF;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 5`] = `
.c0 {
  border: 1px solid #E0E0E0;
  border-radius: 12px;
  color: #E0E0E0;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 6`] = `
.c0 {
  border: 1px solid #BDBDBD;
  border-radius: 12px;
  color: #BDBDBD;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 7`] = `
.c0 {
  border: 1px solid #828282;
  border-radius: 12px;
  color: #828282;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 8`] = `
.c0 {
  border: 1px solid #000000;
  border-radius: 12px;
  color: #000000;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 9`] = `
.c0 {
  border: 1px solid #34333A;
  border-radius: 12px;
  color: #34333A;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 10`] = `
.c0 {
  border: 1px solid #80485b;
  border-radius: 12px;
  color: #80485b;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;

exports[`<Badge/> should render correctly if the variant is valid 11`] = `
.c0 {
  border: 1px solid #fff0de;
  border-radius: 12px;
  color: #fff0de;
  padding: 3px 10px;
  font-weight: 500;
  font-size: 12px;
}

<div>
  <span
    class="c0"
  >
    badge
  </span>
</div>
`;
